--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - "python=3.10"
   - "numpy"
-  - "tiffile"
+  - "tifffile"
   - "scikit-image"
   - "pillow"
   - "ome-types"
